# snapper

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-docs.yml  release-binary.yml
docs/: code-reference.md
docs/css/: code_select.css
resolve_snapshot_timeline/: cli.py  resolve.py  utils.py
snapper/: cli.py  resolve.py  utils.py
