[tool.poetry]
name = "snapper"
version = "0.3.1"
description = "Create a new timeline 'snapshot' to revert to when trying out risky ideas in DaVinci Resolve"
authors = ["Caleb Trevatt <in03@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0, <4.0.0"
rich = "^12.0.1"
natsort = "^8.1.0"
pyfiglet = "^0.8.post1"
typer = "^0.4.0"
pydavinci = {git = "https://github.com/in03/pydavinci"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snapper = "snapper.cli:app"

